--- a/mysql-database/docker-compose.yaml
+++ b/mysql-database/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: 1234password
+      MYSQL_ROOT_PASSWORD: 2070
     ports:
       - 3306:3306
     expose:
