Added PersonRepository and basic software layout

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ repositories {
 
 dependencies {
 
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
