--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,11 @@
 plugins {
     id 'java'
+    id 'org.openjfx.javafxplugin' version '0.0.9'
+}
+
+javafx {
+    version = "15"
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
 group = 'academy.mischok.project'
@@ -8,10 +14,18 @@ version = '1.0-SNAPSHOT'
 repositories {
     mavenCentral()
 }
+def javafxVersion = '21-ea+24'
 
 dependencies {
 
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
+
+    implementation "org.openjfx:javafx-controls:${javafxVersion}:linux"
+    implementation "org.openjfx:javafx-fxml:${javafxVersion}:linux"
+    implementation "org.openjfx:javafx-graphics:${javafxVersion}:linux"
+    implementation 'org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0'
+
+
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
