--- a/mysql-database/docker-compose.yaml
+++ b/mysql-database/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '1.0'
 services:
   db:
     image: mysql
-    command: --default-authentication-plugin=mysql_native_password
+#    command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: 2070
